--- a/site/classwork/assignment/S1-Q2.html
+++ b/site/classwork/assignment/S1-Q2.html
@@ -73,8 +73,7 @@
     <div class="three">
         <div class="two">
             <h2>HTML5</h2><br>
-            <img src="https://www.freepnglogos.com/uploads/html5-logo-png/html5-logo-html-logo-0.png"
-                alt="html5-logo-html-logo-0"><br>
+            <img src="https://icon2.cleanpng.com/20180426/zue/kisspng-web-development-html-responsive-web-design-cascadi-5ae19e6b1412f6.0023511515247355950822.jpg"alt="html5-logo-html-logo-0"><br>
             <h4>Hyper Text Markup language</h4><br>
             HTML is used to create the basic structure and content of a web page
         </div>
