--- a/site/classwork/assignment/S5-Q1.html
+++ b/site/classwork/assignment/S5-Q1.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="author" content="Pratyush Kumar">
     <title>Forms go brr</title>
     <style>
         body {
