--- a/site/classwork/assignment/S5-Q2.html
+++ b/site/classwork/assignment/S5-Q2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
 <head>
-    <title>Set5_Q2</title>
+    <meta charset="utf-8">
+    <meta name="author" content="Pratyush Kumar">
+    <title>Class Magic</title>
     <style>
         body{
             margin:auto;
