--- a/site/classwork/assignment/S6-Q1.html
+++ b/site/classwork/assignment/S6-Q1.html
@@ -1,69 +1,76 @@
-<html>
-    <head>
-        <title>6a</title>
-        <style>
-            table{
-             text-align: center;
-             margin-left: 32%;
-            }
-            h1{
-                text-align: center;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Employee Interests Survey form</h1><br>
-        <table>
-            <form>
-                <tr>
-                    <td width="50%">Enter your name:</td>
-                    <td><input type='text' size="30"></td>
-                </tr>
-                <tr>
-                    <td>Enter your department:</td>
-                    <td><input type='text' size="30"></td>
-                </tr>
-                <tr>
-                    <td>Tell us a little about yourself:</td>
-                    <td><textarea></textarea></td>
-                </tr>
-                <tr>
-                    <td>Do you exercise at home?</td>
-                    <td>
-                        <input type='radio' name="gen" value="M">Male
-                        <input type='radio' name="gen" value="F">Female
-                    </td>
-                </tr>
-                <tr>
-                    <td>What genre of movies do you like?</td>
-                    <td>
-                        <select>
-                            <option disabled selected>Select genre</option>
-                            <option>Comedy</option>
-                            <option>Horror</option>
-                            <option>Fantasy</option>
-                            <option>Drama</option>
-                            <option>Thriller</option>
-                            <option>Action</option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="text-align:center"><br>How do you like to read about your favorite topics?</td>
-                </tr>
-                <tr>
-                    <td colspan="2" style="text-align:center">
-                        <input type='checkbox' name="h1" value="bk">Books 
-                        <input type='checkbox' name="h1" value="online">Online resources 
-                        <input type='checkbox' name="h1" value="bk">Phone apps 
-                        <input type='checkbox' name="h1" value="bk">Magazines <br><br>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="text-align:right;"><input type='submit'></td>
-                    <td style="text-align:left;"><input type='reset'></td>
-                </tr>
-            </form>
-        </table>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="author" content="Pratyush Kumar">
+    <title>Form Returns</title>
+    <style>
+        table {
+            text-align: center;
+            margin-left: 32%;
+        }
+
+        h1 {
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Employee Interests Survey form</h1><br>
+    <table>
+        <form>
+            <tr>
+                <td width="50%">Enter your name:</td>
+                <td><input type='text' size="30"></td>
+            </tr>
+            <tr>
+                <td>Enter your department:</td>
+                <td><input type='text' size="30"></td>
+            </tr>
+            <tr>
+                <td>Tell us a little about yourself:</td>
+                <td><textarea></textarea></td>
+            </tr>
+            <tr>
+                <td>Do you exercise at home?</td>
+                <td>
+                    <input type='radio' name="gen" value="M">Male
+                    <input type='radio' name="gen" value="F">Female
+                </td>
+            </tr>
+            <tr>
+                <td>What genre of movies do you like?</td>
+                <td>
+                    <select>
+                        <option disabled selected>Select genre</option>
+                        <option>Comedy</option>
+                        <option>Horror</option>
+                        <option>Fantasy</option>
+                        <option>Drama</option>
+                        <option>Thriller</option>
+                        <option>Action</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" style="text-align:center"><br>How do you like to read about your favorite topics?</td>
+            </tr>
+            <tr>
+                <td colspan="2" style="text-align:center">
+                    <input type='checkbox' name="h1" value="bk">Books
+                    <input type='checkbox' name="h1" value="online">Online resources
+                    <input type='checkbox' name="h1" value="bk">Phone apps
+                    <input type='checkbox' name="h1" value="bk">Magazines <br><br>
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align:right;"><input type='submit'></td>
+                <td style="text-align:left;"><input type='reset'></td>
+            </tr>
+        </form>
+    </table>
+</body>
+
 </html>
