--- a/site/classwork/assignment/S6-Q2.html
+++ b/site/classwork/assignment/S6-Q2.html
@@ -1,65 +1,78 @@
-<html>
+<html lang="en">
+
 <head>
-	<style>
-		body{
-			background-image:url("apples.jpg");
-			background-repeat: no-repeat;
-			background-size:100% 100%;
-		}
-		.d1{
-			background-color:black;
+    <meta charset="utf-8">
+    <meta name="author" content="Pratyush Kumar">
+    <title>Funfoods</title>
+    <style>
+        body {
+            background-image: url("apples.jpg");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+
+        .d1 {
+            background-color: black;
             opacity: 10%;
-			text-align:center;
-			width:33%;
-			height:100%;
-			opacity:0.7;
-			float:left;
-			position:absolute;
-			z-index:1;
-		}
-		.d3{
-			color:white;
-			font-weight:bold;
-			margin-top:125px;
-			font-size:25px;
-		}
-		.b1{
-			background-color:orange;
-			color:white;
-			border-color:white;
+            text-align: center;
+            width: 33%;
+            height: 100%;
+            opacity: 0.7;
+            float: left;
+            position: absolute;
+            z-index: 1;
+        }
+
+        .d3 {
+            color: white;
+            font-weight: bold;
+            margin-top: 125px;
+            font-size: 25px;
+        }
+
+        .b1 {
+            background-color: orange;
+            color: white;
+            border-color: white;
             width: 300px;
-		}
-		.d2{
-			color:black;
-			width:100%;
-			position:absolute;
-		}
-		.t1{
-			border-spacing:20px;
-			font-size:20px;
-		}
-	</style>
+        }
+
+        .d2 {
+            color: black;
+            width: 100%;
+            position: absolute;
+        }
+
+        .t1 {
+            border-spacing: 20px;
+            font-size: 20px;
+        }
+
+        .d2 table {
+            margin: auto;
+        }
+    </style>
 </head>
+
 <body>
-	<div class="d2">
-		<center>
-		<table class="t1">
-			<tr>
-				<th><mark>Home</mark></th>
-				<th><mark>Menu</mark></th>
-				<th><mark>FAQ</mark></th>
-				<th><mark>Contact</mark></th>
-			</tr>
-		</table>
-		</center>
-	</div>
-	<div class="d1">
-		<div class="d3">
-			<h1>WELCOME TO<br>XXX</h1>
-			<i>Order delicious food online, 100%<br>quality,safety and taste assured</i>
-			<h2>CALL 9999999999 FOR<br>RESERVATIONS</h2>
-			<button class="b1">ORDER NOW</button>
-		</div>
-	</div>
+    <div class="d2">
+        <table class="t1">
+            <tr>
+                <th><mark>Home</mark></th>
+                <th><mark>Menu</mark></th>
+                <th><mark>FAQ</mark></th>
+                <th><mark>Contact</mark></th>
+            </tr>
+        </table>
+    </div>
+    <div class="d1">
+        <div class="d3">
+            <h1>WELCOME TO<br>XXX</h1>
+            <i>Order delicious food online, 100%<br>quality,safety and taste assured</i>
+            <h2>CALL 9999999999 FOR<br>RESERVATIONS</h2>
+            <button class="b1">ORDER NOW</button>
+        </div>
+    </div>
 </body>
+
 </html>
