--- a/site/classwork/assignment/S7-Q2.html
+++ b/site/classwork/assignment/S7-Q2.html
@@ -1,84 +1,136 @@
-<html>
+<html lang="en">
 <head>
-	<style>
-		body{
-			background-image:url("orchard.jpg");
-			background-repeat:no-repeat;
-			background-size:100% 100%;
-		}
-		img{
-			border-radius:50%;
-			height:40px;
-			width:40px;
-		}
-		.d1{
-			background-color:black;
-			color:white;
-			height:8%;
-			z-index:1;
-			font-size:25px;
-		}
-		.d11{
-			float:left;
-			padding: 14px 16px;
-		}
-		.d12{
-			float:left;
-			margin-top:22px;
-		}
-		.d13{
-			float:right;
-			padding: 22px 16px;
-		}
-		.d2{
-			text-align:center;
-			background-color:black;
-			color:white;
-			opacity:0.7;
-			width:35%;
-			height:30%
-		}
-		.h1txt{
-			font-size:50px;
-		}
-		.h3txt{
-			font-size:18px;
-		}
-		#sp a{
-			text-decoration:none;
-			color:white;
-		}
-		#sp a:hover{
-			color:lightblue;
-		}
-	</style>
+    <meta charset="utf-8">
+    <meta name="author" content="Pratyush Kumar">
+    <title>Apples indeed</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url("apples.jpg");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            height: 50px;
+            background-color: #333;
+            color: #fff;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        header h3 {
+            padding-left: 20px;
+            color: white
+        }
+
+        nav div a {
+            color: #fff;
+            text-decoration: none;
+            padding: 0 50px;
+        }
+
+
+        .logo img {
+            margin-left: 20px;
+            width: 40px;
+            height: 40px;
+        }
+
+        nav div {
+            display: flex;
+            padding-left: 40%;
+            height: 40px;
+        }
+
+
+        .d1 {
+            background-color: black;
+            color: white;
+            height: 8%;
+            z-index: 1;
+            font-size: 25px;
+        }
+
+        .d11 {
+            float: left;
+            padding: 14px 16px;
+        }
+
+        .d12 {
+            float: left;
+            margin-top: 22px;
+        }
+
+        .d13 {
+            float: right;
+            padding: 22px 16px;
+        }
+
+        .d2 {
+            text-align: center;
+            margin-top: 300px;
+            background-color: black;
+            color: white;
+            opacity: 0.7;
+            width: 35%;
+            height: 30%;
+            margin-left: 34%;
+        }
+
+        .h1txt {
+            font-size: 50px;
+        }
+
+        .h3txt {
+            font-size: 18px;
+        }
+
+        #sp a {
+            text-decoration: none;
+            color: white;
+        }
+
+        #sp a:hover {
+            color: lightblue;
+        }
+    </style>
 </head>
+
 <body>
-	<div class="d1">
-		<div class="d11">
-			<img src="pfppic.png">
-		</div>
-		<div class="d12">
-			MilesSebesta.com
-		</div>
-		<div class="d13">
-			<span id="sp">
-				<a href="#tas">Teaching/Speaking</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-				<a href="#web">Web</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
-				<a href="#des">Design</a>&nbsp&nbsp&nbsp&nbsp&nbsp 
-				<a href="#ani">Animation</a>&nbsp&nbsp&nbsp&nbsp&nbsp 
-				<a href="#blg">Blog</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-			</span>
-		</div>
-	</div>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-	<center>
-	<div class="d2">
-		<br><br><br><br>
-		<h1 class="h1txt">Web Design Visalia</h1>
-		<h3 class="h3txt">Locally grown Visalia Code</h3>
-		<br><br>
-	</div>
-	</center>
+    <header id="section0">
+        <div class="logo">
+            <a href="A4-2.html"><img src="wolf.jpg" alt="deeznuts"></a>
+        </div>
+        <h3>MilesSebesta.com</h3>
+        <nav>
+            <div>
+                <a href="">Teaching/Speaking</a>
+                <a href="">Web Design</a>
+                <a href="">Animation</a>
+                <a href="">Block</a>
+                <a href="">Contact</a>
+            </div>
+        </nav>
+    </header>
+
+
+    <div class="d2">
+        <br>
+        <h1 class="h1txt">Web Design Visalia</h1>
+        <h3 class="h3txt">Locally grown Visalia Code</h3>
+        <br><br>
+    </div>
+
 </body>
+
 </html>
