--- a/site/classwork/assignment/S3-Q2.html
+++ b/site/classwork/assignment/S3-Q2.html
@@ -1,9 +1,117 @@
-<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Pratyush Kumar">
-    <title>Anthem</title>
+    <title>Gym Jam</title>
+	<style>
+		body{
+			font-family:verdana;
+		}
+		.d1{
+			z-index:1;
+			position:absolute;
+			width:99%;
+			height:65%;
+		}
+		.gympic{
+			opacity:0.5;
+			width:100%;
+			height:100%;
+		}
+		.d2{
+			width:98%;
+			background-color:black;
+			z-index:1;
+			float:left;
+			position:absolute;
+			height:2.25%;
+			padding:10px;
+			font-weight:bold;
+		}
+		.d21{
+			float:left;
+		}
+		.d22{
+			float:right;
+		}
+		.t1{
+			color:white;
+		}
+		.b1{
+			color:white;
+			background-color:#CC5500;
+		}
+		.d3{
+			z-index:1;
+			position:absolute;
+			width:99%;
+			height:65%;
+			text-align:center;
+			margin-top:120px;
+			color:black;
+			font-weight:bold;
+		}
+		.b2{
+			color:white;
+			background-color:#CC5500;
+		}
+		.d3h3{
+		}
+		.d3h1{
+			font-size:75px;
+		}
+		.d4{
+			height:30%;
+			width:100%;
+			color:black;
+			text-align:center;
+			margin-top:465px;
+			font-weight:bold;
+			font-family:verdana;
+		}
+	</style>
 </head>
+<body>
+	<div class="d3">
+		<h3 class="d3h3">WORK HARDER,GET STRONGER</h3>
+		<h1 class="d3h1">EASY WITH OUR <span style="color:#CC5500;">G</span><span style="color:#CC5500;">Y</span><span style="color:#CC5500;">M</span><br>
+		<button class="b2">BECOME A MEMBER</button>
+	</div>
+	<div class="d2">
+		<div class="d21">
+			<span style="color:white">T</span>
+			<span style="color:white">R</span>
+			<span style="color:white">A</span>
+			<span style="color:white">I</span>
+			<span style="color:white">N</span>
+			<span style="color:white">I</span>
+			<span style="color:white">N</span>
+			<span style="color:white">G</span>
+			<span style="color:#CC5500">S</span>
+			<span style="color:#CC5500">T</span>
+			<span style="color:#CC5500">U</span>
+			<span style="color:#CC5500">D</span>
+			<span style="color:#CC5500">I</span>
+			<span style="color:#CC5500">O</span>
+		</div>
+		<div class="d22">
+			<table class="t1">
+				<tr>
+					<th>ABOUT &nbsp</th>
+					<th>CLASSES &nbsp</th>
+					<th>SCHEDULES &nbsp</th>
+					<th>CONTACT &nbsp</th>
+					<th><button class="b1">SIGN UP</button></th>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div class="d1">
+		<img src="apples.jpg" class="gympic">
+	</div><br>
+	<div class="d4">
+		<br><br><br>CHOOSE <span style="color:#CC5500">P</span><span style="color:#CC5500">R</span><span style="color:#CC5500">O</span><span style="color:#CC5500">G</span><span style="color:#CC5500">R</span><span style="color:#CC5500">A</span><span style="color:#CC5500">M</span><br>
+		<br><br><br>Sign up to the deluxe program to get the best experience of our gym<br>NO PAIN NO GAIN
+	</div>
+</body>
 </html>
