--- a/site/classwork/indexJ.html
+++ b/site/classwork/indexJ.html
@@ -46,6 +46,20 @@
         <p>{{message}}</p>
 
     </div>
+
+    <div ng-app="myApp" ng-controller="myCtrl">
+        {{potato + " "+tomato}}
+    </div>
+
+
+    <script>
+        var app = angular.module("myApp", []);
+        app.controller("myCtrl", function ($scope) {
+            $scope.potato = "POTATO";
+            $scope.tomato = "TOMATO";
+        });
+    </script>
+
 </body>
 
 </html>
