--- a/site/classwork/assignment/BTECH-M2-S2Q2.html
+++ b/site/classwork/assignment/BTECH-M2-S2Q2.html
@@ -26,6 +26,7 @@
         var app = angular.module('myApp', []);
 
         app.controller('ItemListController', function ($scope) {
+            $scope.test="TEST";
             $scope.items = [
                 { name: 'Item 1', price: 10 },
                 { name: 'Item 2', price: 20 },
