--- a/site/classwork/A6-1_Form.html
+++ b/site/classwork/A6-1_Form.html
@@ -236,7 +236,7 @@
             if (atIndex < 0 || dotIndex < 0) {
                 return false;
             } else if (atIndex > dotIndex) {
-                return flase;
+                return false;
             } else {
                 return true;
             }
