--- a/site/classwork/indexJ2.html
+++ b/site/classwork/indexJ2.html
@@ -60,7 +60,7 @@
         <div>
             <form name="myForm">
                 <h2>Name:</h2>
-                <input name="myName" ng-model="myName" required>
+                <input name="myName" ng-model="myName">
                 <span style="color: brown;" ng-show="myForm.phone.$error.maxlength">REQUIRED!</span>
             </form>
         </div>
