--- a/site/classwork/A8-2_Form.html
+++ b/site/classwork/A8-2_Form.html
@@ -99,7 +99,7 @@
                 ng-required="true">
                 <option value="">Select</option>
             </select>
-            <span style="color: crimson;" ng-show="form.code.$error.required && form.selectedCode.$dirty">Select a
+            <span style="color: crimson;" ng-show="form.code.$error.required && form.code.$dirty">Select a
                 country
                 code...</span>
 
