--- a/angular_js/Practice/likedislike.html
+++ b/angular_js/Practice/likedislike.html
@@ -23,13 +23,14 @@
 <body ng-app="myApp" ng-controller="myCtrl">
     <h1>Like.Dislike</h1>
     <hr>
+    Search table: <input ng-model="search"></input>
     <table>
         <tr>
             <th>Item</th>
             <th>Like</th>
             <th>Dislike</th>
         </tr>
-        <tr ng-repeat="i in list">
+        <tr ng-repeat="i in list | filter: search"> <!--filter: {name: 's'}-->
             <td>{{i.name}}</td>
             <td>{{i.like}} <button ng-click="increment(i)">Like</button></td>
             <td>{{i.dislike}} <button ng-click="decrement(i)">Dislike</button></td>
