--- a/js/calculator.html
+++ b/js/calculator.html
@@ -5,14 +5,71 @@
     <meta charset="utf-8">
     <meta content="author" name="Pratyush">
     <style>
-        body{
+        body {
             background-color: gray;
+        }
+
+        h1,
+        h6 {
+            font-family: 'Courier New', Courier, monospace;
         }
     </style>
 </head>
 
 <body>
-    
+    <h1>Calculator</h1>
+    <h6>Because why not</h6>
+    <hr>
+
+    <div class="row">
+        <input readonly id="result"></input>
+    </div>
+    <div class="row">
+        <button id="7" onclick="add('7')">7</button>
+        <button id="8" onclick="add('8')">8</button>
+        <button id="9" onclick="add('9')">9</button>
+        <button id="/" onclick="add('/')">/</button>
+    </div>
+    <div class="row">
+        <button id="4" onclick="add('4')">4</button>
+        <button id="5" onclick="add('5')">5</button>
+        <button id="6" onclick="add('6')">6</button>
+        <button id="*" onclick="add('*')">*</button>
+    </div>
+    <div class="row">
+        <button id="1" onclick="add('1')">1</button>
+        <button id="2" onclick="add('2')">2</button>
+        <button id="3" onclick="add('3')">3</button>
+        <button id="-" onclick="add('-')">-</button>
+    </div>
+    <div class="row">
+        <button id="0" onclick="add('0')">0</button>
+        <button id="clr" onclick="clearInput()">CLR</button>
+        <button id="=" onclick="calculateResult()">=</button>
+        <button id="+" onclick="add('+')">+</button>
+    </div>
+
+    <script>
+        var input = '';
+
+        function add(num) {
+            input += num;
+            document.getElementById("result").value = input;
+        }
+
+        function calculateResult() {
+            var result = eval(input);
+            input = '';
+            document.getElementById("result").value = result;
+        }
+
+        function clearInput() {
+            input = "";
+            document.getElementById("result").value = input;
+        }
+
+    </script>
+
 </body>
 
 </html>
