--- a/site/classwork/assignment2/Q4.html
+++ b/site/classwork/assignment2/Q4.html
@@ -50,7 +50,7 @@
 
                 for (var i = 0; i < input.length; i++) {
                     for (var j = 0; j < vowels.length; j++) {
-                        if (input[i] == vowels[j]) {
+                        if (input[i].toLowerCase() == vowels[j]) {
                             count++;
                         }
                     }
